# atmApi

./: README.md  docker-compose.yml  example.csv  main.py  model.h5  predictions.csv  pyproject.toml  requirements.txt
api/: Dockerfile  data_pipeline.pkl  feedback.csv  main.py  transform_data.py
api/data/: osm_node_city.json  osm_node_railway_station.json  osm_node_station.json  osm_node_university.json
data/: model.pkl  osm_node_department_store.json  osm_node_mall.json  osm_node_police.json  osm_node_town.json  salary_processed.csv  settlements_processed.csv
