[tool.poetry]
name = "atm-api"
version = "1.0.0"
description = "mlops"
authors = ["Semyon-Yakovlev <patt1337gg@gmail.com>",
           "blarno <bigsquare@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
api = "^0.0.7"
python-multipart = "^0.0.6"
pandas = "^2.1.4"
numpy = "^1.26.3"
joblib = "^1.3.2"
catboost = "^1.2.2"
category_encoders = "^1.3.0"
xgboost = "^2.0.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"